Collapse css fixes

--- a/src/css/AntdOverrides.scss
+++ b/src/css/AntdOverrides.scss
@@ -44,34 +44,43 @@
 .ant-collapse {
   background: $white;
   box-sizing: border-box;
-  border: none;
+  border: none !important;
+  width: 168px !important;
 
   & > .ant-collapse-item {
     border-top: none;
     border-radius: 4px !important;
-    margin-bottom: 16px;
+    //margin-bottom: 16px;
     text-align: left;
+    border-bottom: none !important;
+  }
+  .ant-collapse-item-active {
+    border-bottom: none !important;
   }
 
   .ant-collapse-content-box {
-    border-right: 1px solid $neutral_10;
-    border-left: 1px solid $neutral_10;
+    border: none;
   }
 
   .ant-collapse-content {
     overflow: initial;
     padding: 14px 0 14px 0;
+    border-top: none;
   }
 
   .ant-collapse-header {
     background-color: $white;
     font-size: 14px;
     font-weight: 600;
-    border: 1px solid $border_color;
-    border-bottom: none;
-    border-radius: 4px !important;
+    //border: 1px solid $border_color;
+    border-bottom: none !important;
+    border-radius: 0px !important;
     display: flex;
     align-items: center;
+    //padding: 0!important;
+    line-height: 14px !important;
+    padding: 16px 0 16px 0 !important;
+    border-top: 1px solid $border_color !important;
 
     svg {
       width: 12px;
@@ -91,7 +100,8 @@
   }
 
   .ant-collapse-content > .ant-collapse-content-box {
-    padding: 0 24px;
+    padding: 0 15px;
+    padding-right: 0;
   }
 
   .panel-header {
@@ -196,6 +206,7 @@
     & + span {
       line-height: 0px;
       padding-left: 12px;
+      padding-right: 0;
     }
   }
 }
