--- a/src/pages/mainPage/MainPage.module.scss
+++ b/src/pages/mainPage/MainPage.module.scss
@@ -40,7 +40,7 @@
 
   .sidebar-wrapper {
     display: flex;
-    width: 192px;
+    //width: 192px;
     height: 100%;
     z-index: 2;
     transition: 0.4s ease;
